--- a/assets/main.scss
+++ b/assets/main.scss
@@ -2,7 +2,34 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-@import "minima";
+// Override defaults for variables by uncommenting here
+
+// $base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+// $base-font-size:   16px;
+// $base-font-weight: 400;
+// $small-font-size:  $base-font-size * 0.875;
+// $base-line-height: 1.5;
+//
+// $spacing-unit:     30px;
+//
+$text-color:       #444;
+$background-color: #000;
+$brand-color:      #e8267d;
+
+//
+// $grey-color:       #828282;
+// $grey-color-light: lighten($grey-color, 40%);
+// $grey-color-dark:  darken($grey-color, 25%);
+//
+// $table-text-align: left;
+//
+// // Width of the content area
+// $content-width:    800px;
+//
+// $on-palm:          600px;
+// $on-laptop:        800px;
+
+@import "minima"; // This must happen AFTER assigning variables
 
 div.big-sentence {
   font-size: 3em;
