--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,9 @@
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li class="p-name">
-            {%- if site.author -%}
+            {%- if site.resume_link -%}
+              <a href="{{ site.resume_link | escape }}">Resume</a>
+            {%- elsif site.author -%}
               {{ site.author | escape }}
             {%- else -%}
               {{ site.title | escape }}
