--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,105 +1,1 @@
----
-# Only the main Sass file needs front matter (the dashes are enough)
----
-
-// Override defaults for variables by uncommenting here
-
-// $base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
-// $base-font-size:   16px;
-// $base-font-weight: 400;
-// $small-font-size:  $base-font-size * 0.875;
-// $base-line-height: 1.5;
-//
-// $spacing-unit:     30px;
-//
-$text-color:       #444;
-$background-color: #000;
-$brand-color:      #e8267d;
-
-//
-$grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 20%);
-// $grey-color-dark:  darken($grey-color, 25%);
-//
-// $table-text-align: left;
-//
-// // Width of the content area
-$content-width:    1200px;
-//
-// $on-palm:          600px;
-// $on-laptop:        800px;
-
-
-@import "minima"; // This must happen AFTER assigning variables
-
-html {
-  // Set the base font-size (reference point for rems)
-  font-size: 16px;
-  @include media-query($on-palm) {
-    font-size: 10px;
-  }
-}
-
-a {
-  &:hover {
-    color: $brand-color;
-    text-decoration: solid underline $brand-color;
-  }
-}
-
-figure.highlight {
-  background-color: $background-color;
-
-  & .nf, .s1, .s2 {
-    color: $brand-color;
-  }
-}
-
-code, pre {
-  color: $grey-color-light;
-  border: 1px solid #1c1c53;
-  border-radius: 3px;
-  background-color: #1c1c53;
-}
-
-.site-header, .site-footer {
-  border-bottom-color: $text-color;
-  border-top-color: $text-color;
-}
-
-.site-nav {
-  a.page-link {
-    color: $brand-color;
-    &:hover {
-      color: $brand-color;
-      text-decoration: solid underline $brand-color;
-      text-decoration-skip-ink: none;
-    }
-  }
-}
-
-div.big-sentence {
-  font-size: 3rem;
-  &:not(:last-child) {
-    margin-bottom: 0.6em;
-  }
-  & a {
-    &:hover {
-      color: $brand-color;
-      text-decoration: dotted underline $brand-color;
-      text-decoration-skip-ink: none;
-    }
-  }
-}
-
-div.skills-box {
-  color: $brand-color;
-  font-size: 2rem;
-  margin-left: 15px;
-  & span.skill {
-    white-space: nowrap;
-    &:not(:last-child)::after {
-      content: " |"
-    }
-  }
-}
+@import "main"
