--- a/assets/main.scss
+++ b/assets/main.scss
@@ -4,7 +4,7 @@
 
 // Override defaults for variables by uncommenting here
 
-// $base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
+$base-font-family: "Catamaran", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 // $base-font-size:   16px;
 // $base-font-weight: 400;
 // $small-font-size:  $base-font-size * 0.875;
@@ -12,7 +12,7 @@
 //
 // $spacing-unit:     30px;
 //
-$text-color:       #444;
+$text-color:       #5b5959;
 $background-color: #000;
 $brand-color:      #e8267d;
 
