change brand color

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -12,9 +12,9 @@ $base-font-family: "Catamaran", -apple-system, BlinkMacSystemFont, "Segoe UI", R
 //
 // $spacing-unit:     30px;
 //
-$text-color:       #5b5959;
-$background-color: #000;
-$brand-color:      #e8267d;
+$text-color:       black;
+$background-color: #fff;
+$brand-color:      #2634a7;
 
 //
 $grey-color:       #828282;
